[package]
name = "enable-ansi-support"
description = "Enable ANSI escape code support on Windows 10"
version = "0.1.2"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sunshowers-code/enable-ansi-support"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi", "winnt"] }
